# algorithmic_problems

./: .gitignore  .gitmodules  Dockerfile  README.md
absolute_elements_sum/tst/: input1.txt
codeforces/: Cargo.toml
codeforces/src/: carrots_for_rabbits.rs  ciel_the_commander.rs  i_yearn_for_the_mines.rs  make_it_zero.rs  puzzle.rs  the_least_round_way.rs
hackerrank/absolute_element_sum/src/: main.rs
hackerrank/how_many_substrings/src/: main.rs
hackerrank/string_similarity/src/: main.rs
hackerrank/string_similarity/tst/: input1.txt  output2.txt
how_many_substrings/: Cargo.toml
how_many_substrings/src/: main.rs
