[package]
name = "codeforces_problems"
version = "0.1.0"
include = ["src"]
edition = "2024"

[[bin]]
name = "the_least_round_way"
path = "src/the_least_round_way.rs"

[[bin]]
name = "ciel_the_commander"
path = "src/ciel_the_commander.rs"

[[bin]]
name = "carrots_for_rabbits"
path = "src/carrots_for_rabbits.rs"

[[bin]]
name = "make_it_zero"
path = "src/make_it_zero.rs"

[[bin]]
name = "i_yearn_for_the_mines"
path = "src/i_yearn_for_the_mines.rs"
